--- a/source-code/model.ipynb
+++ b/source-code/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,16 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import cross_validate, KFold, GridSearchCV\n",
     "df = pd.read_csv('./data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,26 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "le = LabelEncoder()\n",
-    "df[\"brand\"] = le.fit_transform(df[\"brand\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df[\"brand\"] = le.fit_transform(df[\"brand\"])\n",
     "df['model']= le.fit_transform(df['model'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,85 +149,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fit_time          0.056398\n",
+       "score_time        0.004449\n",
+       "test_score    -1560.702432\n",
+       "train_score   -1505.867577\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr = LinearRegression()\n",
+    "\n",
+    "lr_scores = cross_validate(lr, X, y, cv=5, scoring='neg_root_mean_squared_error', return_train_score=True)\n",
+    "df_lr_scores = pd.DataFrame(lr_scores)\n",
+    "df_lr_scores.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Score: 0.9420483695406769\n",
-      "Best Hyperparameters: {'max_depth': 19, 'min_samples_leaf': 5}\n"
+      "Best Score: -1131.8591698289752\n",
+      "Best Hyperparameters: {'max_depth': 18, 'min_samples_leaf': 10}\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.model_selection import RepeatedKFold\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
-    "# define model\n",
     "model = DecisionTreeRegressor()\n",
-    "# define evaluation\n",
-    "cv = RepeatedKFold(n_splits=5, n_repeats=3, random_state=1)\n",
-    "# define search space\n",
+    "cv = KFold(n_splits=5)\n",
     "space = dict()\n",
-    "space['max_depth'] = [17, 18, 19]\n",
+    "space['max_depth'] = [15, 16, 17, 18, 19]\n",
     "space['min_samples_leaf'] = [5, 10, 15]\n",
-    "# define search\n",
-    "search = GridSearchCV(model, space, scoring='r2', n_jobs=-1, cv=cv)\n",
-    "# execute search\n",
+    "search = GridSearchCV(model, space, scoring='neg_root_mean_squared_error', n_jobs=-1, cv=cv)\n",
     "result = search.fit(X, y)\n",
-    "# summarize result\n",
     "print('Best Score: %s' % result.best_score_)\n",
     "print('Best Hyperparameters: %s' % result.best_params_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[169], line 15\u001b[0m\n\u001b[1;32m     13\u001b[0m search \u001b[39m=\u001b[39m GridSearchCV(model, space, scoring\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mr2\u001b[39m\u001b[39m'\u001b[39m, n_jobs\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, cv\u001b[39m=\u001b[39mcv)\n\u001b[1;32m     14\u001b[0m \u001b[39m# execute search\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m result \u001b[39m=\u001b[39m search\u001b[39m.\u001b[39;49mfit(X, y)\n\u001b[1;32m     16\u001b[0m \u001b[39m# summarize result\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mBest Score: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m result\u001b[39m.\u001b[39mbest_score_)\n",
-      "File \u001b[0;32m~/miniconda3/envs/sandbox/lib/python3.11/site-packages/sklearn/model_selection/_search.py:874\u001b[0m, in \u001b[0;36mBaseSearchCV.fit\u001b[0;34m(self, X, y, groups, **fit_params)\u001b[0m\n\u001b[1;32m    868\u001b[0m     results \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_format_results(\n\u001b[1;32m    869\u001b[0m         all_candidate_params, n_splits, all_out, all_more_results\n\u001b[1;32m    870\u001b[0m     )\n\u001b[1;32m    872\u001b[0m     \u001b[39mreturn\u001b[39;00m results\n\u001b[0;32m--> 874\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_run_search(evaluate_candidates)\n\u001b[1;32m    876\u001b[0m \u001b[39m# multimetric is determined here because in the case of a callable\u001b[39;00m\n\u001b[1;32m    877\u001b[0m \u001b[39m# self.scoring the return type is only known after calling\u001b[39;00m\n\u001b[1;32m    878\u001b[0m first_test_score \u001b[39m=\u001b[39m all_out[\u001b[39m0\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mtest_scores\u001b[39m\u001b[39m\"\u001b[39m]\n",
-      "File \u001b[0;32m~/miniconda3/envs/sandbox/lib/python3.11/site-packages/sklearn/model_selection/_search.py:1388\u001b[0m, in \u001b[0;36mGridSearchCV._run_search\u001b[0;34m(self, evaluate_candidates)\u001b[0m\n\u001b[1;32m   1386\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_run_search\u001b[39m(\u001b[39mself\u001b[39m, evaluate_candidates):\n\u001b[1;32m   1387\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Search all candidates in param_grid\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1388\u001b[0m     evaluate_candidates(ParameterGrid(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mparam_grid))\n",
-      "File \u001b[0;32m~/miniconda3/envs/sandbox/lib/python3.11/site-packages/sklearn/model_selection/_search.py:821\u001b[0m, in \u001b[0;36mBaseSearchCV.fit.<locals>.evaluate_candidates\u001b[0;34m(candidate_params, cv, more_results)\u001b[0m\n\u001b[1;32m    813\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mverbose \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    814\u001b[0m     \u001b[39mprint\u001b[39m(\n\u001b[1;32m    815\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mFitting \u001b[39m\u001b[39m{0}\u001b[39;00m\u001b[39m folds for each of \u001b[39m\u001b[39m{1}\u001b[39;00m\u001b[39m candidates,\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    816\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m totalling \u001b[39m\u001b[39m{2}\u001b[39;00m\u001b[39m fits\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m    817\u001b[0m             n_splits, n_candidates, n_candidates \u001b[39m*\u001b[39m n_splits\n\u001b[1;32m    818\u001b[0m         )\n\u001b[1;32m    819\u001b[0m     )\n\u001b[0;32m--> 821\u001b[0m out \u001b[39m=\u001b[39m parallel(\n\u001b[1;32m    822\u001b[0m     delayed(_fit_and_score)(\n\u001b[1;32m    823\u001b[0m         clone(base_estimator),\n\u001b[1;32m    824\u001b[0m         X,\n\u001b[1;32m    825\u001b[0m         y,\n\u001b[1;32m    826\u001b[0m         train\u001b[39m=\u001b[39;49mtrain,\n\u001b[1;32m    827\u001b[0m         test\u001b[39m=\u001b[39;49mtest,\n\u001b[1;32m    828\u001b[0m         parameters\u001b[39m=\u001b[39;49mparameters,\n\u001b[1;32m    829\u001b[0m         split_progress\u001b[39m=\u001b[39;49m(split_idx, n_splits),\n\u001b[1;32m    830\u001b[0m         candidate_progress\u001b[39m=\u001b[39;49m(cand_idx, n_candidates),\n\u001b[1;32m    831\u001b[0m         \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mfit_and_score_kwargs,\n\u001b[1;32m    832\u001b[0m     )\n\u001b[1;32m    833\u001b[0m     \u001b[39mfor\u001b[39;49;00m (cand_idx, parameters), (split_idx, (train, test)) \u001b[39min\u001b[39;49;00m product(\n\u001b[1;32m    834\u001b[0m         \u001b[39menumerate\u001b[39;49m(candidate_params), \u001b[39menumerate\u001b[39;49m(cv\u001b[39m.\u001b[39;49msplit(X, y, groups))\n\u001b[1;32m    835\u001b[0m     )\n\u001b[1;32m    836\u001b[0m )\n\u001b[1;32m    838\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(out) \u001b[39m<\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m    839\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    840\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mNo fits were performed. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    841\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mWas the CV iterator empty? \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    842\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mWere there no candidates?\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    843\u001b[0m     )\n",
-      "File \u001b[0;32m~/miniconda3/envs/sandbox/lib/python3.11/site-packages/sklearn/utils/parallel.py:63\u001b[0m, in \u001b[0;36mParallel.__call__\u001b[0;34m(self, iterable)\u001b[0m\n\u001b[1;32m     58\u001b[0m config \u001b[39m=\u001b[39m get_config()\n\u001b[1;32m     59\u001b[0m iterable_with_config \u001b[39m=\u001b[39m (\n\u001b[1;32m     60\u001b[0m     (_with_config(delayed_func, config), args, kwargs)\n\u001b[1;32m     61\u001b[0m     \u001b[39mfor\u001b[39;00m delayed_func, args, kwargs \u001b[39min\u001b[39;00m iterable\n\u001b[1;32m     62\u001b[0m )\n\u001b[0;32m---> 63\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m\u001b[39m__call__\u001b[39;49m(iterable_with_config)\n",
-      "File \u001b[0;32m~/miniconda3/envs/sandbox/lib/python3.11/site-packages/joblib/parallel.py:1061\u001b[0m, in \u001b[0;36mParallel.__call__\u001b[0;34m(self, iterable)\u001b[0m\n\u001b[1;32m   1058\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_iterating \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m   1060\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backend\u001b[39m.\u001b[39mretrieval_context():\n\u001b[0;32m-> 1061\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mretrieve()\n\u001b[1;32m   1062\u001b[0m \u001b[39m# Make sure that we get a last message telling us we are done\u001b[39;00m\n\u001b[1;32m   1063\u001b[0m elapsed_time \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime() \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_start_time\n",
-      "File \u001b[0;32m~/miniconda3/envs/sandbox/lib/python3.11/site-packages/joblib/parallel.py:938\u001b[0m, in \u001b[0;36mParallel.retrieve\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    936\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    937\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backend, \u001b[39m'\u001b[39m\u001b[39msupports_timeout\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mFalse\u001b[39;00m):\n\u001b[0;32m--> 938\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_output\u001b[39m.\u001b[39mextend(job\u001b[39m.\u001b[39;49mget(timeout\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtimeout))\n\u001b[1;32m    939\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    940\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_output\u001b[39m.\u001b[39mextend(job\u001b[39m.\u001b[39mget())\n",
-      "File \u001b[0;32m~/miniconda3/envs/sandbox/lib/python3.11/site-packages/joblib/_parallel_backends.py:542\u001b[0m, in \u001b[0;36mLokyBackend.wrap_future_result\u001b[0;34m(future, timeout)\u001b[0m\n\u001b[1;32m    539\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Wrapper for Future.result to implement the same behaviour as\u001b[39;00m\n\u001b[1;32m    540\u001b[0m \u001b[39mAsyncResults.get from multiprocessing.\"\"\"\u001b[39;00m\n\u001b[1;32m    541\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 542\u001b[0m     \u001b[39mreturn\u001b[39;00m future\u001b[39m.\u001b[39;49mresult(timeout\u001b[39m=\u001b[39;49mtimeout)\n\u001b[1;32m    543\u001b[0m \u001b[39mexcept\u001b[39;00m CfTimeoutError \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    544\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTimeoutError\u001b[39;00m \u001b[39mfrom\u001b[39;00m \u001b[39me\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/sandbox/lib/python3.11/concurrent/futures/_base.py:451\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    448\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_state \u001b[39m==\u001b[39m FINISHED:\n\u001b[1;32m    449\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__get_result()\n\u001b[0;32m--> 451\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_condition\u001b[39m.\u001b[39;49mwait(timeout)\n\u001b[1;32m    453\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_state \u001b[39min\u001b[39;00m [CANCELLED, CANCELLED_AND_NOTIFIED]:\n\u001b[1;32m    454\u001b[0m     \u001b[39mraise\u001b[39;00m CancelledError()\n",
-      "File \u001b[0;32m~/miniconda3/envs/sandbox/lib/python3.11/threading.py:320\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    318\u001b[0m \u001b[39mtry\u001b[39;00m:    \u001b[39m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    319\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 320\u001b[0m         waiter\u001b[39m.\u001b[39;49macquire()\n\u001b[1;32m    321\u001b[0m         gotit \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    322\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "data": {
+      "text/plain": [
+       "fit_time          0.077689\n",
+       "score_time        0.003705\n",
+       "test_score    -1158.073959\n",
+       "train_score    -470.108199\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtr = DecisionTreeRegressor(max_depth=18, min_samples_leaf=10)\n",
+    "dtr_scores = cross_validate(dtr, X, y, cv=5, scoring='neg_root_mean_squared_error', return_train_score=True)\n",
+    "df_dtr_scores = pd.DataFrame(dtr_scores)\n",
+    "df_dtr_scores.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score: -1050.3957125435911\n",
+      "Best Hyperparameters: {'n_estimators': 120}\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import RepeatedKFold\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
-    "# define model\n",
     "model = RandomForestRegressor()\n",
-    "# define evaluation\n",
-    "cv = RepeatedKFold(n_splits=5, n_repeats=3, random_state=1)\n",
-    "# define search space\n",
+    "cv = KFold(n_splits=5)\n",
     "space = dict()\n",
     "space['n_estimators'] = [110, 120, 130]\n",
-    "# define search\n",
-    "search = GridSearchCV(model, space, scoring='r2', n_jobs=-1, cv=cv)\n",
-    "# execute search\n",
+    "search = GridSearchCV(model, space, scoring='neg_root_mean_squared_error', n_jobs=-1, cv=cv)\n",
     "result = search.fit(X, y)\n",
-    "# summarize result\n",
     "print('Best Score: %s' % result.best_score_)\n",
     "print('Best Hyperparameters: %s' % result.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fit_time          7.622758\n",
+       "score_time        0.104573\n",
+       "test_score    -1064.256013\n",
+       "train_score    -207.887157\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfr = RandomForestRegressor(n_estimators=120)\n",
+    "rfr_scores = cross_validate(rfr, X, y, cv=5, scoring='neg_root_mean_squared_error', return_train_score=True)\n",
+    "df_rfr_scores = pd.DataFrame(rfr_scores)\n",
+    "df_rfr_scores.mean()"
    ]
   }
  ],
